CREATE TABLE "facility" (
  "facility_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) NOT NULL,
  "city" varchar(50) NOT NULL,
  "postal_code" varchar(20),
  "address" varchar(200),
  "capacity" integer,
  "room_type" varchar(50),
  "hc_accessible" boolean DEFAULT false
);

CREATE TABLE "class" (
  "class_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "class_code" varchar(20) UNIQUE NOT NULL,
  "facility_id" integer NOT NULL,
  "program_id" varchar(20),
  "managed_by_employee_person_id" integer NOT NULL,
  "cohort_number" integer,
  "start_date" date NOT NULL,
  "end_date" date,
  "is_distance" boolean DEFAULT false
);

CREATE TABLE "program" (
  "program_id" varchar(20) PRIMARY KEY,
  "program_code" varchar(20) UNIQUE NOT NULL,
  "program_name" varchar(100) NOT NULL,
  "points_total" integer,
  "decision_number" integer NOT NULL
);

CREATE TABLE "program_course" (
  "program_id" varchar(20) NOT NULL,
  "course_id" varchar(20) NOT NULL,
  "semester_number" integer,
  PRIMARY KEY ("program_id", "course_id")
);

CREATE TABLE "course" (
  "course_id" varchar(20) PRIMARY KEY,
  "course_code" varchar(20) UNIQUE NOT NULL,
  "course_name" varchar(100) NOT NULL,
  "course_description" text,
  "course_points" integer
);

CREATE TABLE "teaching_assignment" (
  "teaching_assignment_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "class_id" integer NOT NULL,
  "course_id" varchar(20) NOT NULL,
  "educator_person_id" integer NOT NULL,
  "start_date" date NOT NULL,
  "end_date" date,
  "term" varchar(20) NOT NULL
);

CREATE TABLE "person" (
  "person_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50) NOT NULL,
  "last_name" varchar(50) NOT NULL,
  "email" varchar(100) UNIQUE NOT NULL,
  "created_at" timestamptz DEFAULT (now())
);

CREATE TABLE "person_sensitive" (
  "person_id" integer PRIMARY KEY,
  "personal_number" varchar(13) UNIQUE NOT NULL,
  "private_email" varchar(100),
  "home_address" varchar(200),
  "phone_number" varchar(15)
);

CREATE TABLE "student" (
  "person_id" integer PRIMARY KEY,
  "class_id" integer NOT NULL
);

CREATE TABLE "employee" (
  "person_id" integer PRIMARY KEY,
  "title" varchar(100),
  "employee_nr" varchar(20) UNIQUE NOT NULL,
  "employee_salary" decimal(10,2) NOT NULL,
  "employment_type" varchar(20) NOT NULL
);

CREATE TABLE "educator" (
  "person_id" integer PRIMARY KEY,
  "competence_area" varchar(100) NOT NULL
);

CREATE TABLE "consultant" (
  "person_id" integer PRIMARY KEY,
  "consultant_company_id" integer NOT NULL,
  "hourly_rate" decimal(10,2) NOT NULL
);

CREATE TABLE "consultant_company" (
  "consultant_company_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "org_number" varchar(11) UNIQUE NOT NULL,
  "name" varchar(100) NOT NULL,
  "has_f_skatt" boolean DEFAULT false,
  "address" varchar(200)
);

CREATE UNIQUE INDEX ON "teaching_assignment" ("class_id", "course_id", "educator_person_id");

COMMENT ON COLUMN "facility"."capacity" IS 'CHECK(capacity > 0)';

COMMENT ON COLUMN "class"."end_date" IS 'CHECK(end_date IS NULL OR end_date > start_date)';

COMMENT ON COLUMN "program"."points_total" IS 'CHECK(points_total > 0)';

COMMENT ON COLUMN "program_course"."semester_number" IS 'CHECK(semester_number BETWEEN 1 AND 6)';

COMMENT ON COLUMN "course"."course_points" IS 'CHECK(course_points > 0)';

COMMENT ON COLUMN "teaching_assignment"."end_date" IS 'CHECK(end_date IS NULL OR end_date > start_date)';

COMMENT ON COLUMN "teaching_assignment"."term" IS 'CHECK(term IN (''HT'', ''VT''))';

COMMENT ON COLUMN "employee"."employee_salary" IS 'CHECK(employee_salary > 0)';

COMMENT ON COLUMN "consultant"."hourly_rate" IS 'CHECK(hourly_rate > 0)';

ALTER TABLE "class" ADD FOREIGN KEY ("facility_id") REFERENCES "facility" ("facility_id");

ALTER TABLE "class" ADD FOREIGN KEY ("program_id") REFERENCES "program" ("program_id");

ALTER TABLE "class" ADD FOREIGN KEY ("managed_by_employee_person_id") REFERENCES "employee" ("person_id");

ALTER TABLE "program_course" ADD FOREIGN KEY ("program_id") REFERENCES "program" ("program_id");

ALTER TABLE "program_course" ADD FOREIGN KEY ("course_id") REFERENCES "course" ("course_id");

ALTER TABLE "teaching_assignment" ADD FOREIGN KEY ("class_id") REFERENCES "class" ("class_id");

ALTER TABLE "teaching_assignment" ADD FOREIGN KEY ("course_id") REFERENCES "course" ("course_id");

ALTER TABLE "teaching_assignment" ADD FOREIGN KEY ("educator_person_id") REFERENCES "educator" ("person_id");

ALTER TABLE "person_sensitive" ADD FOREIGN KEY ("person_id") REFERENCES "person" ("person_id");

ALTER TABLE "student" ADD FOREIGN KEY ("person_id") REFERENCES "person" ("person_id");

ALTER TABLE "student" ADD FOREIGN KEY ("class_id") REFERENCES "class" ("class_id");

ALTER TABLE "employee" ADD FOREIGN KEY ("person_id") REFERENCES "person" ("person_id");

ALTER TABLE "educator" ADD FOREIGN KEY ("person_id") REFERENCES "person" ("person_id");

ALTER TABLE "consultant" ADD FOREIGN KEY ("person_id") REFERENCES "educator" ("person_id");

ALTER TABLE "consultant" ADD FOREIGN KEY ("consultant_company_id") REFERENCES "consultant_company" ("consultant_company_id");
