erDiagram

    STUDENT {
    }

    KLASS {
    }
    
    PROGRAM {
    }

    COURSE {
    }

    TEACHES {
    }

    EDUCATOR {
    }

    FACILITY {
    }
    
    EDUCATION_LEADER {
    }

    EMPLOYEE {
    }

    CONSULTANT {
    }

    STUDENT ||--|{ KLASS : ""
    KLASS }|--o{ PROGRAM : ""
    PROGRAM }|--|{ COURSE : ""


    KLASS }|--|| FACILITY : ""
    KLASS ||--|{ TEACHES : ""
    KLASS }|--|| EDUCATION_LEADER : ""

    
    TEACHES }|--|| COURSE : ""
    TEACHES }|--|| EDUCATOR : ""

    EDUCATOR ||--|{ EMPLOYEE : ""
    EDUCATOR ||--|{ CONSULTANT : ""

    EDUCATION_LEADER ||--|| EMPLOYEE : ""